# teradata-mcp-evals

./: .env.example  .gitignore  AGENTS.md  README.md  audit_cases.py  generate_cases.py  inspect_tools.py  preflight.py  pyproject.toml  run_evals.py  setup_test_data.py  suggest_overrides.py  teardown_test_data.py  todo.md
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/workflows/: ci.yml
agent/: client.py
backup/: README.md  __init__.py  audit_cases.py  generate_cases.py  inspect_tools.py  test_audit_cases.py
cases/: base.json  chat.json  dba.json  plot.json  qlty.json  sec.json  tmpl.json
docs/: cases.md  setup.md  structure.md  workflow.md
judge/: bedrock_llm.py  checks.py  metrics.py  report.py  suggest_overrides.py
tests/: case_runner.py  conftest.py  test_audit_cases.py  test_base.py  test_chat.py  test_checks.py  test_dba.py  test_description_overrides.py  test_multi_turn.py  test_plot.py  test_qlty.py  test_report.py  test_sec.py  test_suggest_overrides.py  test_tmpl.py
