[project]
name = "teradata-mcp-evals"
version = "0.1.0"
description = "Eval suite for the Teradata MCP Server community edition"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=1.4.0",
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "teradatasql>=20.0.0",
]

[project.scripts]
run-evals = "run_evals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "judge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
